--- a/src/components/GeoChartGreece/index.css
+++ b/src/components/GeoChartGreece/index.css
@@ -6,3 +6,26 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
+.fade-enter {
+  opacity: 0;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
+.chart-container {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.chart-container.visible {
+  opacity: 1;
+}
