--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #111827;
-  height: 100%;
+  height: fit-content;
   color: white;
   font-family: "Montserrat";
 }
